Bug 1717889 - Make sure we don't call NextSurfaceAsFramebuffer on zero-sized native layers. r=mkaply a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D119676